tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_59.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  r := ((- ((q MOD 1) MOD (0 - 200))) > (((0 MOD z) - (y * z)) MOD (- (x + 1223))));
               y := ((((- 1) - (1 MOD 1)) - (- (+ y))) MOD (((+ 200) * (- 1223)) * (- (- 0))));
               q := ((((200 MOD x) * (+ 2)) DIV (+ (1223 + y))) <= (((y MOD x) + (0 DIV 1)) DIV ((x * x) MOD (1223 * z))));
               q := ((~ ((1 > 1223) OR (x = x))) & (((y - 1) - (+ z)) = ((- 2) DIV (z MOD 0))));
               q := (((+ (+ 200)) * (- (z * x))) <= ((+ (1223 + x)) * (+ (0 - 1223))));
               y := ((((- z) * (0 DIV y)) + ((1223 DIV 1) DIV (2 MOD 1))) * (- ((+ 1) MOD (0 - z))));
               p := ((((+ 1) * (- x)) > ((1223 DIV 2) DIV (0 DIV 1223))) & (((+ x) # (z DIV 200)) & ((1 < 0) OR (0 <= 200))));
               q := ((((- 0) + (- y)) * (+ (+ 2))) < (((0 - y) MOD (2 MOD y)) * (- (1 + z))));
               y := ((((x DIV 2) * (+ z)) MOD ((- 1) MOD (0 * 0))) - (((1223 - x) + (+ 1223)) - ((+ 0) * (z MOD x))));
               p := (~ (((x * y) - (+ z)) <= ((0 MOD z) DIV (- 1))))
END Test11.